# zelynic

./: .codespellrc  .gitignore  .yamllint  BRANDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RULES.md  TRADEMARK.md  build.rs  build.sh  deny.toml  install.sh  package.sh  set-version.sh  worklog.md
.cargo/: config.toml
.github/: dependabot.yml
benches/: monitor_bench.rs
bpf/: observer.bpf.c
docs/: distro-matrix.md  experimental-pid-move-lab.md  getting-started.md  release-v2.1.0.md  release-v2.2.0.md  release-v2.3.0.md  release-v2.4.0.md  release-v2.5.0.md  release-v2.7.0.md  release-v2.8.0.md  release-v2.9.0.md  release-v3.0.1.md  release.md  scope-lab.md  strict-backend-design.md  strict-prelaunch-cgroup-wrapper-experiment.md  strict-run-lab-ctrlc-cleanup-audit.md  strict-run-lab-manual-validation-matrix.md  strict-run-lab-validation-freeze.md  strict-run-ux-simplification-gate.md  strict-run-wrapper-stable-contract.md  strict-traffic-proof-honesty-audit.md  supply-chain.md  systemd-wrapper-design.md  usage.md  v2.8-phase-2c-validation-report.md  v2.8-phase-3a-single-pid-rollback-design.md  v2.8-phase-3d-output-audit.md  v2.8-phase-3e-release-readiness-freeze.md  v2.8-phase-4a-failure-simulation-design.md  v2.8-phase-4e-failure-simulation-freeze.md  v2.8-phase-5a-first-real-move-readiness.md  v2.8-phase-5b-manual-smoke-operator-checklist.md  v2.8-phase-5c-guarded-real-move-implementation-design.md  v2.8-phase-5e-guarded-real-writer-freeze.md  v2.8-phase-5g-guarded-real-writer-integration-audit.md  v2.8-phase-5h-final-pre-real-write-validation.md  v2.8-phase-5i-release-candidate-freeze.md  v2.9-network-accounting-lab.md  (+41 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bandwidth_rate.rs  fuzz_socket_parse.rs
(+314 files in other folders)
