[package]
name = "zelynic"
version = "2.1.0"
edition = "2021"
description = "Easy userspace bandwidth manager for Linux"
authors = ["Rezky_nightky"]
license = "GPL-3.0-only"
repository = "https://github.com/oxyzenq/zelynic"
readme = "README.md"
keywords = ["bandwidth", "network", "linux", "traffic-control", "rate-limiting"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.88.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.31", features = ["process", "fs", "feature", "user"] }
time = "0.3.47"
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

# eBPF support (optional)
[dependencies.aya]
version = "0.13"
optional = true

[features]
default = []
ebpf = ["aya"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "monitor_bench"
harness = false
