[package]
name = "oxy-fuzz"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
oxy = { path = ".." }

[[bin]]
name = "fuzz_bandwidth_rate"
path = "fuzz_targets/fuzz_bandwidth_rate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_socket_parse"
path = "fuzz_targets/fuzz_socket_parse.rs"
test = false
doc = false
